--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export":"next export",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,14 +15,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@nivo/bar": "^0.80.0",
-    "@nivo/core": "^0.80.0",
-    "@nivo/pie": "^0.80.0",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@mui/styled-engine-sc": "^5.8.0",
+    "@nivo/bar": "^0.80.0",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
+    "@react-pdf/renderer": "^3.0.2",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "crypto-js": "4.0.0",
+    "dotenv": "^16.0.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "flutterwave-react-v3": "^1.2.1",
@@ -43,11 +46,13 @@
     "react-select": "^5.3.2",
     "react-social-icons": "^5.13.0",
     "react-spring": "^9.4.5",
-    "react-toastify": "^9.0.1",
+    "react-toastify": "^9.1.1",
     "react-use-cart": "^1.13.0",
     "sass": "^1.51.0",
     "styled-components": "^5.3.5",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "video.js": "^7.20.3",
+    "videojs-contrib-quality-levels": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
